pkg/lang/testdata/ub/config/valid/configurations-static-expression.ub
configurations: { aws: { default: { region: if true then 'a' else 'b' } } }
