pkg/lang/testdata/ub/config/invalid/configurations-qualified-call.ub
configurations: { aws: { default: { region: core.format('x') } } }
